components/evaluator/tests/compile-fail/const_assignment.rs
// error-pattern:Assignment to constant variable 

const a = 1;
a = 2;